# constitution

./: .dockerignore  .gitignore  AGENTS.md  DURABLE_STATE.md  Dockerfile  TEST.sh  constitution.py  fly.toml  launch.py  launchtime.py  mint.py  mint_wait.py  pyproject.toml  seed.tdsl
.github/workflows/: deploy.yml
experiments/pairsel/: Cargo.toml  analyze.py  calibrate.py
experiments/pairsel/results/: main_budget_summary.csv  main_summary.csv
experiments/pairsel/src/: calib.rs  lib.rs  main.rs  metrics.rs  noise.rs  rank.rs  runner.rs  state.rs  world.rs
experiments/pairsel/src/strategies/: bootstrap_inversion.rs  bt_uncertainty.rs  cycle_chords.rs  explore_refine.rs  merge_sort.rs  mod.rs  payout_opt.rs  quicksort.rs  random_matching.rs  random_pairs.rs  swiss.rs  top_heavy.rs  zip.rs
scripts/: download-ledger.sh  import-ledger.py  wipe-ledger.sh
tests/: conftest.py  integration.clj  test_evidence.py  test_git_discovery.py  test_git_discovery_stateful.py  test_mint_wait.py  test_pair_selection.py  test_side_orientation.py  test_snippet_binding.py  test_state_migration.py  test_votes_per_edge.py
