[project]
name = "slug-constitution"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "evaleval==0.2.7",
    "numpy",
    "httpx",
    "fastapi",
    "uvicorn",
    "tenacity",
    "starlette",
    "itsdangerous",
    "pytest",
    "hypothesis",
    "sympy",
    "authlib",
    "python-multipart",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
