[project]
name = "slug-constitution"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "evaleval @ git+https://github.com/tommy-mor/evaleval.git@584225b43f37261b446ad04169aaddf77ca6c201",
    "rocksdict>=0.3.29",
    "numpy",
    "httpx",
    "fastapi",
    "uvicorn",
    "tenacity",
    "starlette",
    "itsdangerous",
    "pytest",
    "hypothesis",
    "sympy",
    "authlib",
    "python-multipart",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
